# python-w6d

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run.py
backend/: api.py
backend/endpoints/: infer.py  train.py
