[tool.poetry]
name = "backend"
version = "0.0.1"
description = "Backend"
license = "MIT"
authors = [
  "Pierre-Yves BOISBUNON <boisbu@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/py4mac/python-w6d"
repository = "https://github.com/py4mac/python-w6d"
documentation ="https://github.com/py4mac/python-w6d"
keywords = ["utilities", "utils"]
classifiers = [
  "Development Status :: 5 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
requests = "2.23.0"  # TestClient

# Testing
pytest = "6.0.0"
pytest-cov = "2.8.1"
pytest-asyncio = "0.12.0"
coverage = "5.1"
testfixtures = "6.14.1"

# Static
isort = "4.3.21"
autoflake = "1.3.1"
black = "19.10b0"
flake8 = "3.7.9"
mypy = "0.770"

# Documentation
mkdocs = "*"
mkdocs-material = "*"
markdown-include = "*"
pymdown-extensions = "*"
fontawesome-markdown = "*"
mock = "3.0.5"
autopep8 = "1.5.2"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | build
  )/
)
'''

[tool.isort]
line_length = 120
known_first_party = ["backend", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
